# task_handler

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
src/api/: urls.py
src/api/v1/: urls.py
src/api/v1/tasks/serializers/: serializers.py
src/api/v1/tasks/views/: views.py
src/apps/tasks/: enums.py  models.py  tests.py
src/apps/tasks/migrations/: 0001_initial.py
src/apps/tasks/services/: services.py
src/celery_tasks/: tasks.py
